--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,17 @@ def ROBOT_MAIN_CLASS = "frc.robot.Main"
 // Set this to true to enable desktop support.
 def includeDesktopSupport = true
 
+repositories {
+    mavenLocal()
+    maven {
+        url = uri("https://maven.pkg.github.com/edreed/nrgcommon")
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
+}
+
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
@@ -24,6 +35,8 @@ dependencies {
     nativeRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.desktop)
     nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
     simulationRelease wpi.sim.enableRelease()
+
+    implementation 'org.nrg948:nrgcommon:2022.0.0'
 
     testImplementation 'junit:junit:4.13.1'
 }
