--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
     simulationRelease wpi.sim.enableRelease()
 
+    implementation 'org.reflections:reflections:0.10.2'
+
     implementation 'org.nrg948:nrgcommon:2022.0.0'
 
     testImplementation 'junit:junit:4.13.1'
