Upgrade to WPILib 2023.1.1-beta.7

--- a/.gitignore
+++ b/.gitignore
@@ -163,8 +163,7 @@ bin/
 simgui*.json
 
 # Network Tables configuration files
-networktables.ini
-networktables.ini.bak
+networktables.*
 
 # SysId files
 .SysId/
