--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     simulationRelease wpi.sim.enableRelease()
 
     implementation 'org.reflections:reflections:0.10.2'
-    implementation 'com.nrg948:nrgcommon:2023.2.0'
+    implementation 'com.nrg948:nrgcommon:2023.2.1-SNAPSHOT'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.4.2'
