--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2023.4.1"
+    id "edu.wpi.first.GradleRIO" version "2023.4.3"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -37,7 +37,7 @@ dependencies {
     simulationRelease wpi.sim.enableRelease()
 
     implementation 'org.reflections:reflections:0.10.2'
-    implementation 'com.nrg948:nrgcommon:2023.4.0-SNAPSHOT'
+    implementation 'com.nrg948:nrgcommon:2023.4.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.4.2'
